--- a/package.json
+++ b/package.json
@@ -12,5 +12,20 @@
   "dependencies": {
     "express": "^4.16.2",
     "socket.io": "^2.0.4"
+  },
+  "devDependencies": {
+    "babel-core": "6.26.0",
+    "babel-loader": "7.1.2",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-react": "6.24.1",
+    "babel-preset-stage-2": "6.24.1",
+    "css-loader": "0.28.7",
+    "html-webpack-plugin": "2.30.1",
+    "optimize-js-plugin": "0.0.4",
+    "react-hot-loader": "3.1.3",
+    "style-loader": "0.19.0",
+    "uglifyjs-webpack-plugin": "^1.1.6",
+    "webpack": "3.9.1",
+    "webpack-dev-server": "2.9.5"
   }
 }
